[package]
name = "hyper-native-tls"
version = "0.3.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
exclude = ["test/*"]
license = "MIT/Apache-2.0"
description = "native-tls support for Hyper"
repository = "https://github.com/sfackler/hyper-native-tls"
readme = "README.md"

[dependencies]
antidote = "1.0"
native-tls = "0.2"
hyper = "0.10"
